# FinTwin-AI-Project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
auth/: auth_service.py  password_utils.py  session.py
config/: settings.py
database/: db.py  init_db.py  schema.py
ml/: feature_engineering.py  prediction.py  train_anomaly_model.py  train_cluster_model.py  train_health_model.py
repositories/: analytics_repository.py  dashboard_repository.py  profile_repository.py  transaction_repository.py  user_repository.py
services/: analytics_service.py  dashboard_service.py  financial_health_service.py  ml_service.py  profile_service.py  transaction_service.py
ui/: ai_spending_insights.py  analytics_charts.py  cards.py  charts.py  components.py  sidebar.py  styles.py  transaction_charts.py
ui/components/: transaction_summary.py
ui/pages/: analytics.py  dashboard.py  financial_profile.py  login.py  transactions.py
